--- a/Diccionario/nbproject/private/private.properties
+++ b/Diccionario/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/happy/Library/Application Support/NetBeans/8.0/build.properties
+user.properties.file=C:\\Users\\Esteban\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
